--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
-<div class="wrapper row4">
-  <footer id="footer" class="hoc clear">
-    <div class="one_third first">
-      <h6 class="heading">Study Way</h6>
+<section class="footer">
+  <footer class="hide">
+    <div>
+      <h6>Study Way</h6>
       <nav>
-        <ul class="nospace">
-          <li><a href="#"><i class="fa fa-lg fa-home"></i></a></li>
+        <ul>
+          <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -42,12 +42,7 @@
       </form>
     </div>
   </footer>
-</div>
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear">
-    <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/"
-                                       title="Free Website Templates">OS Templates</a></p>
+  <div class="domain font-14 bold">
+    <a class="font-14" href="#">www.studyway.in</a>
   </div>
-</div>
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+</section>
