home changes changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,34 +2,105 @@
   <div class="top-banner">
     <img class="imgWidFix" src="assets/img/study-banner.jpg" alt="studyway">
   </div>
+  <div class="tech-info">
+    <div class="bold heading">Technologies Info</div>
+    <div class="category">
+      <div class="item">
+        <div class="head font-14 bold">Angular</div>
+        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
+          everything by hand.
+          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
+          of
+          ongoing development tasks such as testing, bundling, and deployment.
+        </div>
+      </div>
+      <div class="item">
+        <div class="head font-14 bold">Angular</div>
+        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
+          everything by hand.
+          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
+          of
+          ongoing development tasks such as testing, bundling, and deployment.
+        </div>
+      </div>
+      <div class="item">
+        <div class="head font-14 bold">Angular</div>
+        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
+          everything by hand.
+          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
+          of
+          ongoing development tasks such as testing, bundling, and deployment.
+        </div>
+      </div>
+      <div class="item">
+        <div class="head font-14 bold">Angular</div>
+        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
+          everything by hand.
+          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
+          of
+          ongoing development tasks such as testing, bundling, and deployment.
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <div class="category">
-    <div class="item">
-      <div class="head font-14 bold">Angular</div>
-      <div class="font-12">Good tools make application development quicker and easier to maintain than if you did everything by hand.
-        The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety of
-        ongoing development tasks such as testing, bundling, and deployment.
-      </div>
+  <div class="about-me">
+    <div class="bold head">About this site</div>
+    <div class="content">This website is for study purpose. It contains the the information about the frontend
+      technologies. We further
+      improve our knowledge and make this website better for study and technology information.
     </div>
-    <div>
-      <div class="head font-14 bold">Angular</div>
-      <div class="font-12">Good tools make application development quicker and easier to maintain than if you did everything by hand.
-        The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety of
-        ongoing development tasks such as testing, bundling, and deployment.
-      </div>
+    <div class="footer-cont">
+      Please subscribe our news in subscribe section.
     </div>
-    <div>
-      <div class="head font-14 bold">Angular</div>
-      <div class="font-12">Good tools make application development quicker and easier to maintain than if you did everything by hand.
-        The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety of
-        ongoing development tasks such as testing, bundling, and deployment.
+  </div>
+
+  <div class="tech-news">
+    <div class="bold heading">Technologies News</div>
+    <div class="category">
+      <div class="item">
+        <div class="head font-14 bold">Angular</div>
+        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
+          everything by hand.
+          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
+          of
+          ongoing development tasks such as testing, bundling, and deployment.
+        </div>
       </div>
-    </div>
-    <div>
-      <div class="head font-14 bold">Angular</div>
-      <div class="font-12">Good tools make application development quicker and easier to maintain than if you did everything by hand.
-        The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety of
-        ongoing development tasks such as testing, bundling, and deployment.
+      <div class="item">
+        <div class="head font-14 bold">Angular</div>
+        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
+          everything by hand.
+          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
+          of
+          ongoing development tasks such as testing, bundling, and deployment.
+        </div>
+      </div>
+      <div class="item">
+        <div class="head font-14 bold">Angular</div>
+        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
+          everything by hand.
+          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
+          of
+          ongoing development tasks such as testing, bundling, and deployment.
+        </div>
+      </div>
+      <div class="item">
+        <div class="head font-14 bold">Angular</div>
+        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
+          everything by hand.
+          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
+          of
+          ongoing development tasks such as testing, bundling, and deployment.
+        </div>
       </div>
     </div>
   </div>
