--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,21 +2,86 @@
   .top-banner {
     height: 50vh;
   }
-
-  .category{
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .item{
-      margin-right: 15px;
-      margin-left: 15px;
-    }
-    .head{
+  .tech-info {
+    .heading{
+      background-color: #c5c5c5;
+      font-size: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-bottom: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      margin-top: 10px;
+    }
+    .category {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .item {
+        margin-right: 15px;
+        margin-left: 15px;
+        .tech-img{
+
+        }
+      }
+      .head {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 6px;
+      }
+    }
+  }
+  .about-me {
+    margin-top: 25px;
+    .head {
+      background-color: #c5c5c5;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+    .content {
+      margin: 10px;
+      text-align: center;
+    }
+    .footer-cont {
+      margin: 10px;
+      text-align: center;
+    }
+  }
+  .tech-news {
+    .heading{
+      background-color: #c5c5c5;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      margin-top: 20px;
+    }
+    .category {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .heading {
+
+      }
+      .item {
+        margin-right: 15px;
+        margin-left: 15px;
+      }
+      .head {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 6px;
+      }
     }
   }
 }
