home page changes

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,10 @@
 .footer {
-
-
-
+  margin-top: 20px;
+  border-top: 1px solid #656565;
   .domain{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 10vh;
+    height: 8vh;
   }
 }
