--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
     <div class="category">
       <div class="item">
         <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
         <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
           everything by hand.
           The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
@@ -16,28 +16,21 @@
         </div>
       </div>
       <div class="item">
-        <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
-        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
-          everything by hand.
-          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
-          of
-          ongoing development tasks such as testing, bundling, and deployment.
+        <div class="head font-14 bold">Angular-Cli</div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/angular-cli.png" alt="studyway"></div>
+        <div class="font-12">Command Line Interface (CLI) can be used to create our Angular JS application. It also helps in creating a unit and end-to-end tests for the application.
+          The official site for Angular CLI is https://cli.angular.io
+        </div>
+      </div>
+      <div class="item">
+        <div class="head font-14 bold">Angular Material</div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/angular-material.png" alt="studyway"></div>
+        <div class="font-12">Angular Material is a UI component library for Angular JS developers. Angular Material components help in constructing attractive, consistent, and functional web pages and web applications while adhering to modern web design principles like browser portability, device independence, and graceful degradation.
         </div>
       </div>
       <div class="item">
         <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
-        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
-          everything by hand.
-          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
-          of
-          ongoing development tasks such as testing, bundling, and deployment.
-        </div>
-      </div>
-      <div class="item">
-        <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
         <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
           everything by hand.
           The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
@@ -49,12 +42,12 @@
   </div>
 
   <div class="about-me">
-    <div class="bold head">About this site</div>
-    <div class="content">This website is for study purpose. It contains the the information about the frontend
+    <div class="bold head font-14">About this site</div>
+    <div class="content font-12">This website is for study purpose. It contains the the information about the frontend
       technologies. We further
       improve our knowledge and make this website better for study and technology information.
     </div>
-    <div class="footer-cont">
+    <div class="footer-cont font-12">
       Please subscribe our news in subscribe section.
     </div>
   </div>
@@ -64,7 +57,7 @@
     <div class="category">
       <div class="item">
         <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
         <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
           everything by hand.
           The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
@@ -74,7 +67,7 @@
       </div>
       <div class="item">
         <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
         <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
           everything by hand.
           The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
@@ -84,7 +77,7 @@
       </div>
       <div class="item">
         <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
         <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
           everything by hand.
           The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
@@ -94,7 +87,7 @@
       </div>
       <div class="item">
         <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWidFix" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
         <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
           everything by hand.
           The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
@@ -109,19 +102,17 @@
     <div class="bold heading">Touch With Us</div>
     <div class="subsc">
       <div class="left">
-        <div class="bold head">Contact Us</div>
-        <div>Email:- xyz@studyway.in</div>
-        <div>Mobile:- xxxxxxxxxx</div>
+        <div class="bold head font-14">Contact Us</div>
+        <div class="font-12">Email:- xyz@studyway.in</div>
+        <div class="font-12">Mobile:- xxxxxxxxxx</div>
       </div>
       <div class="right">
-        <div class="bold head">Subscribed Us</div>
-        <div>Name: <input type="text" name="name"></div>
-        <div>Email: <input type="text" name="email"></div>
+        <div class="bold head font-14">Subscribed Us</div>
+        <div class="font-12">Name: <input type="text" name="name"></div>
+        <div class="font-12">Email: <input type="text" name="email"></div>
       </div>
     </div>
-
   </div>
-
 </section>
 
 
