--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,24 +18,25 @@
       <div class="item">
         <div class="head font-14 bold">Angular-Cli</div>
         <div class="tech-img"><img class="imgWid" src="assets/img/angular-cli.png" alt="studyway"></div>
-        <div class="font-12">Command Line Interface (CLI) can be used to create our Angular JS application. It also helps in creating a unit and end-to-end tests for the application.
+        <div class="font-12">Command Line Interface (CLI) can be used to create our Angular JS application. It also
+          helps in creating a unit and end-to-end tests for the application.
           The official site for Angular CLI is https://cli.angular.io
         </div>
       </div>
       <div class="item">
         <div class="head font-14 bold">Angular Material</div>
         <div class="tech-img"><img class="imgWid" src="assets/img/angular-material.png" alt="studyway"></div>
-        <div class="font-12">Angular Material is a UI component library for Angular JS developers. Angular Material components help in constructing attractive, consistent, and functional web pages and web applications while adhering to modern web design principles like browser portability, device independence, and graceful degradation.
+        <div class="font-12">Angular Material is a UI component library for Angular JS developers. Angular Material
+          components help in constructing attractive, consistent, and functional web pages and web applications while
+          adhering to modern web design principles like browser portability, device independence, and graceful
+          degradation.
         </div>
       </div>
       <div class="item">
-        <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
-        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
-          everything by hand.
-          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
-          of
-          ongoing development tasks such as testing, bundling, and deployment.
+        <div class="head font-14 bold">Angular Bootstrap</div>
+        <div class="tech-img"><img class="imgWid" src="assets/img/boot-logo-ang.png" alt="studyway"></div>
+        <div class="font-12">Angular specific widgets built from the ground up only using Bootstrap 4 CSS, with APIs
+          that makes sense in the Angular ecosystem.
         </div>
       </div>
     </div>
@@ -48,53 +49,46 @@
       improve our knowledge and make this website better for study and technology information.
     </div>
     <div class="footer-cont font-12">
-      Please subscribe our news in subscribe section.
+      Please subscribe our news.
     </div>
   </div>
 
   <div class="tech-news">
-    <div class="bold heading">Technologies News</div>
+    <div class="bold heading">Technologies Updates</div>
     <div class="category">
       <div class="item">
-        <div class="head font-14 bold">Angular</div>
+        <div class="head font-14 bold">Angular 6 Released</div>
         <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
-        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
-          everything by hand.
-          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
-          of
-          ongoing development tasks such as testing, bundling, and deployment.
+        <div class="font-12">Angular 6 version is released. It has many improvements and new features like `ng update`,
+          `ng add` etc. For More go to angular blog <a
+            href="https://blog.angular.io/version-6-of-angular-now-available-cc56b0efa7a4" target="_blank">Angular
+            blog</a>
         </div>
       </div>
       <div class="item">
-        <div class="head font-14 bold">Angular</div>
+        <div class="head font-14 bold">Run Angular CLI repos directly in your browser</div>
         <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
-        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
-          everything by hand.
-          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
-          of
-          ongoing development tasks such as testing, bundling, and deployment.
+        <div class="font-12">The StackBlitz, a lightning fast online IDE that allows you to live edit Angular CLI
+          projects in-browser. It also now powers all of the official Angular.io documentation examples!
         </div>
       </div>
       <div class="item">
-        <div class="head font-14 bold">Angular</div>
+        <div class="head font-14 bold">Schematics</div>
         <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
-        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
-          everything by hand.
-          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
-          of
-          ongoing development tasks such as testing, bundling, and deployment.
+        <div class="font-12">Schematics is a workflow tool for the modern web; it can apply transforms to your project,
+          such as create a new component, or updating your code to fix breaking changes in a dependency
         </div>
       </div>
-      <div class="item">
-        <div class="head font-14 bold">Angular</div>
-        <div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>
-        <div class="font-12">Good tools make application development quicker and easier to maintain than if you did
-          everything by hand.
-          The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety
-          of
-          ongoing development tasks such as testing, bundling, and deployment.
-        </div>
-      </div>
+      <!--<div class="item">-->
+        <!--<div class="head font-14 bold">Angular</div>-->
+        <!--<div class="tech-img"><img class="imgWid" src="assets/img/angular-4-tutorial.png" alt="studyway"></div>-->
+        <!--<div class="font-12">Good tools make application development quicker and easier to maintain than if you did-->
+          <!--everything by hand.-->
+          <!--The Angular CLI is a command line interface tool that can create a project, add files, and perform a variety-->
+          <!--of-->
+          <!--ongoing development tasks such as testing, bundling, and deployment.-->
+        <!--</div>-->
+      <!--</div>-->
     </div>
   </div>
 
@@ -103,13 +97,14 @@
     <div class="subsc">
       <div class="left">
         <div class="bold head font-14">Contact Us</div>
-        <div class="font-12">Email:- xyz@studyway.in</div>
+        <div class="font-12">Email:- suport@studyway.in</div>
         <div class="font-12">Mobile:- xxxxxxxxxx</div>
       </div>
       <div class="right">
         <div class="bold head font-14">Subscribed Us</div>
         <div class="font-12">Name: <input type="text" name="name"></div>
         <div class="font-12">Email: <input type="text" name="email"></div>
+        <button type="button">Submit</button>
       </div>
     </div>
   </div>
