--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -26,6 +26,7 @@
           height: 15vh;
           align-items: center;
           display: flex;
+          justify-content: center;
         }
       }
       .head {
@@ -80,14 +81,18 @@
         margin-left: 15px;
         line-height: 1.1rem;
         word-spacing: 0.2rem;
-        .tech-img{
+        .tech-img {
           height: 15vh;
+          align-items: center;
+          display: flex;
+          justify-content: center;
         }
       }
       .head {
         display: flex;
         align-items: center;
         justify-content: center;
+        text-align: center;
         margin-bottom: 6px;
       }
     }
@@ -112,15 +117,15 @@
         width: 50%;
         text-align: center;
         line-height: 1.5rem;
-        .head{
+        .head {
           margin-bottom: 10px;
         }
       }
-      .right{
+      .right {
         width: 50%;
         text-align: center;
         line-height: 1.5rem;
-        .head{
+        .head {
           margin-bottom: 10px;
         }
       }
